[package]
name = "gnosis-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
ethers = "1.0.0"
once_cell = "1.16.0"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.0.1", features = ["macros"] }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }
tracing-test = "0.2.3"
